Corrected word-wrap in editor

--- a/layout 2/css/editor.css
+++ b/layout 2/css/editor.css
@@ -1,3 +1,7 @@
+#middle-editor-row {
+	word-wrap:break-word;
+}
+
 #editor-toolbar {
     display: table-cell;
     vertical-align: middle;
